--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.1'
-
 services:
 
   joomla:
@@ -17,9 +15,8 @@ services:
       JOOMLA_DB_PASSWORD: p4ssw0rd
 
   joomladb:
-    image: mysql:8.0
+    image: mysql:latest
     container_name: joomladb    
-    command: --default-authentication-plugin=mysql_native_password  
     expose:
       - "3306"
     restart: unless-stopped
