--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,29 +2,39 @@ services:
 
   joomla:
     image: joomla:latest
+    container_name: joomla    
     restart: unless-stopped
     ports:
       - "8200:80"
-    environment:
-      JOOMLA_DB_HOST: db
-      JOOMLA_DB_USER: joomla
-      JOOMLA_DB_PASSWORD: examplepass
-      JOOMLA_DB_NAME: joomla_db
-      JOOMLA_SITE_NAME: Joomla
-      JOOMLA_ADMIN_USER: Admin
-      JOOMLA_ADMIN_USERNAME: admin
-      JOOMLA_ADMIN_PASSWORD: p4ssw0rd-1234
-      JOOMLA_ADMIN_EMAIL: admin@example.com
+    depends_on:
+      - joomladb
     volumes:
-      - ./joomla_data:/var/www/html
+      - ./joomla/data:/var/www/html
+    environment:
+      JOOMLA_DB_HOST: joomladb
+      JOOMLA_DB_NAME: joomla_db
+      JOOMLA_DB_USER: joomla
+      JOOMLA_DB_PASSWORD: p4ssw0rd
 
-  db:
+  joomladb:
     image: mysql:latest
+    container_name: joomladb    
+    expose:
+      - "3306"
     restart: unless-stopped
+    volumes:
+      - ./db_data:/var/lib/mysql
     environment:
       MYSQL_DATABASE: joomla_db
       MYSQL_USER: joomla
-      MYSQL_PASSWORD: examplepass
-      MYSQL_RANDOM_ROOT_PASSWORD: '1'
-    volumes:
-      - ./db_data:/var/lib/mysql
+      MYSQL_PASSWORD: p4ssw0rd
+      MYSQL_ROOT_PASSWORD: p4ssw0rd
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: joomlapma 
+    restart: unless-stopped
+    environment:
+      PMA_ARBITRARY: "1"
+    ports:
+      - "8080:80"
